@@ -1,40 +1,0 @@
-<configure
-    xmlns="http://namespaces.zope.org/zope"
-    xmlns:browser="http://namespaces.zope.org/browser"
-    xmlns:zcml="http://namespaces.zope.org/zcml">
-
-  <configure package="plone.app.contentmenu">
-
-    <!-- remove workflow menu by overriding it with an unavailable menu -->
-    <adapter
-        for="* *"
-        name="plone.contentmenu.workflow"
-        factory="ftw.contentmenu.overrides.WorkflowSubMenuItem"
-        provides=".interfaces.IContentMenuItem"
-        />
-
-    <adapter for="* *"
-             name="plone.contentmenu.actions"
-             factory="ftw.contentmenu.menu.CombinedActionsWorkflowSubMenuItem"
-             provides=".interfaces.IContentMenuItem" />
-
-    <adapter for="* *"
-             name="plone.contentmenu.factories"
-             factory="ftw.contentmenu.menu.FtwFactoriesSubMenuItem"
-             provides=".interfaces.IContentMenuItem" />
-
-    <browser:menu
-        id="plone_contentmenu_actions"
-        title="Combined actions- and workflow-menu"
-        class="ftw.contentmenu.menu.CombinedActionsWorkflowMenu"
-        />
-
-    <browser:menu
-        id="plone_contentmenu_factory"
-        title="The 'add' menu - allows the user to add new content items in the context"
-        class="ftw.contentmenu.menu.FactoriesMenu"
-    />
-
-
-  </configure>
-</configure>
